--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
-    "date-fns": "^2.21.3",
+    "date-fns": "^2.23.0",
     "disqus-react": "^1.1.2",
     "gray-matter": "^4.0.3",
-    "highlight.js": "^10.7.2",
+    "highlight.js": "^10.7.3",
     "next": "^11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "rehype-highlight": "^4.1.0",
     "rehype-katex": "^5.0.0",
@@ -31,33 +31,33 @@
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.1.0",
     "ts-node": "^10.2.1",
-    "unified": "^9.2.1"
+    "unified": "^9.2.2"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
     "@types/node": "^16.7.4",
     "@types/react": "^17.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "autoprefixer": "^10.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "autoprefixer": "^10.3.3",
     "babel-jest": "^27.1.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "jest-watch-typeahead": "^0.6.3",
+    "jest-watch-typeahead": "^0.6.4",
     "postcss": "^8.3.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.2",
-    "typescript": "^4.2.4",
-    "yargs": "^17.0.1"
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.8",
+    "typescript": "^4.4.2",
+    "yargs": "^17.1.1"
   }
 }
