--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linhmtran168.github.io",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +9,16 @@
     "export": "next export",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "lint": "next lint",
     "test": "jest",
     "test-all": "npm lint && npm type-check && npm test",
     "new-post": "./cli/newPost.ts -t"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@mapbox/rehype-prism": "^0.6.0",
     "date-fns": "^2.23.0",
     "disqus-react": "^1.1.2",
@@ -34,21 +38,17 @@
     "unified": "^9.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@types/node": "^16.7.4",
     "@types/react": "^17.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
     "autoprefixer": "^10.3.3",
     "babel-jest": "^27.1.0",
     "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.4",
     "postcss": "^8.3.6",
@@ -56,6 +56,7 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.2.8",
     "typescript": "^4.4.2",
     "yargs": "^17.1.1"
