--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "date-fns": "^2.23.0",
@@ -40,6 +40,7 @@
     "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
+    "@types/yargs": "^17.0.10",
     "autoprefixer": "^10.3.3",
     "babel-jest": "^28.1.0",
     "eslint": "^8.1.0",
@@ -47,7 +48,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^26.2.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
+    "jest": "^28.1.0",
     "jest-watch-typeahead": "^1.1.0",
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -57,6 +58,6 @@
     "react-test-renderer": "^18.0.9",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.4.2",
-    "yargs": "^17.2.1"
+    "yargs": "^17.5.1"
   }
 }
