--- a/.github/workflows/deploy_auto.yml
+++ b/.github/workflows/deploy_auto.yml
@@ -12,12 +12,11 @@ jobs:
     if: ${{ github.event.issue.pull_request }}
     name: PR comment to Deploy
     outputs:
-      to_deploy: ${{ steps.check_command.outputs.to_deploy }}
       env: ${{ steps.check_command.outputs.env }}
       branch: ${{ steps.get_branch_name.outputs.branch_name }}
     steps:
       - name: Check deploy command
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         id: check_command
         with:
           script: |
@@ -26,7 +25,7 @@ jobs:
             let [command, env] = body.split(' ').filter(w => w !== '')
             if (command !== '/deploy') {
               // Not deploy comment, abort other steps
-              core.setOutput('to_deploy', 'false')
+              core.setFailed('Invalid command')
               return;
             }
             if (!['qa1', 'qa2', 'qa3'].includes(env)) {
@@ -43,7 +42,7 @@ jobs:
               content: 'eyes'
             });
       - name: Get branch name
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         id: get_branch_name
         if: ${{ steps.check_command.outputs.to_deploy == 'true' }}
         with:
@@ -67,7 +66,6 @@ jobs:
     uses: linhmtran168/linhmtran168.github.io/.github/workflows/deploy_test.yml@master
     needs: get_inputs
     name: Deploy
-    if: ${{ needs.get_inputs.outputs.to_deploy == 'true' }}
     with:
       branch: ${{ needs.get_inputs.outputs.branch }}
       environment: ${{ needs.get_inputs.outputs.env }}
@@ -79,7 +77,7 @@ jobs:
     name: Notify
     steps:
       - name: Create reaction comment
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         id: check_command
         with:
           script: |
