--- a/.github/workflows/deploy_auto.yml
+++ b/.github/workflows/deploy_auto.yml
@@ -71,7 +71,7 @@ jobs:
 
   deploy:
     uses: linhmtran168/linhmtran168.github.io/.github/workflows/deploy_test.yml@master
-    needs: get_inputs
+    needs: notify-start
     name: Deploy
     with:
       branch: ${{ needs.get_inputs.outputs.branch }}
@@ -80,7 +80,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [ get_inputs, deploy]
+    needs: deploy
     name: Notify
     steps:
       - name: Create reaction comment
