--- a/.github/workflows/slack_notify_start.yml
+++ b/.github/workflows/slack_notify_start.yml
@@ -21,7 +21,7 @@ jobs:
             {
               "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
               "run_id": "${{ github.run_id }}",
-              "status": "started",
+              "state": "started",
               "params": "${{ inputs.params }}"
             }
         env:
