--- a/.github/workflows/deploy_auto.yml
+++ b/.github/workflows/deploy_auto.yml
@@ -63,10 +63,11 @@ jobs:
             }
 
   notify-start:
-    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify_start.yml@master
+    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify.yml@master
     needs: get_inputs
     with:
       params: "Branch: ${{ needs.get_inputs.outputs.branch }}, Environment: ${{ needs.get_inputs.outputs.env }}"
+      state: STARTED
     secrets: inherit
 
   deploy:
@@ -78,20 +79,18 @@ jobs:
       environment: ${{ needs.get_inputs.outputs.env }}
     secrets: inherit
 
-  notify:
-    runs-on: ubuntu-latest
-    needs: deploy
-    name: Notify
-    steps:
-      - name: Create reaction comment
-        uses: actions/github-script@v6
-        id: check_command
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            await github.rest.reactions.createForIssueComment({
-              owner,
-              repo,
-              comment_id: context.payload.comment.id,
-              content: 'rocket'
-            });
+  notify-failed:
+    if: failure()
+    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify.yml@master
+    with:
+      params: "Branch: ${{ needs.get_inputs.outputs.branch }}, Environment: ${{ needs.get_inputs.outputs.env }}"
+      state: FAILED
+    secrets: inherit
+
+  notify-success:
+    if: success()
+    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify.yml@master
+    with:
+      params: "Branch: ${{ needs.get_inputs.outputs.branch }}, Environment: ${{ needs.get_inputs.outputs.env }}"
+      state: SUCCEEDED
+    secrets: inherit
