--- a/.github/workflows/deploy_manual.yml
+++ b/.github/workflows/deploy_manual.yml
@@ -20,9 +20,10 @@ on:
 
 jobs:
   notify-start:
-    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify_start.yml@master
+    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify.yml@master
     with:
       params: "Branch: ${{ inputs.branch }}, Env: ${{ inputs.environment }}"
+      state: STARTED
     secrets: inherit
 
   deploy:
@@ -31,4 +32,20 @@ jobs:
     with:
       branch: ${{ inputs.branch }}
       environment: ${{ inputs.environment }}
+    secrets: inherit
+
+  notify-failed:
+    if: failure()
+    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify.yml@master
+    with:
+      params: "Branch: ${{ inputs.branch }}, Env: ${{ inputs.environment }}"
+      state: FAILED
+    secrets: inherit
+
+  notify-success:
+    if: success()
+    uses: linhmtran168/linhmtran168.github.io/.github/workflows/slack_notify.yml@master
+    with:
+      params: "Branch: ${{ inputs.branch }}, Env: ${{ inputs.environment }}"
+      state: SUCCEEDED
     secrets: inherit
