--- a/.github/workflows/slack_notify.yml
+++ b/.github/workflows/slack_notify.yml
@@ -25,7 +25,7 @@ jobs:
             {
               "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
               "run_id": "${{ github.run_id }}",
-              "state": "${{ inputs.state }},
+              "state": "${{ inputs.state }}",
               "params": "${{ inputs.params }}"
             }
         env:
