--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mdx-js/mdx": "^2.1.3",
     "date-fns": "^2.29.3",
     "disqus-react": "^1.1.2",
     "gray-matter": "^4.0.3",
@@ -28,12 +29,12 @@
     "react-dom": "^18.0.9",
     "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.1",
-    "rehype-stringify": "^9.0.2",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.0",
-    "remark-parse": "^10.0.0",
-    "remark-rehype": "^10.0.0",
-    "ts-node": "^10.9.1",
-    "unified": "^10.1.0"
+    "remark-mdx": "^2.1.3",
+    "remark-mdx-frontmatter": "^2.0.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
