--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/mdx": "^2.1.3",
     "date-fns": "^2.29.3",
@@ -45,7 +45,7 @@
     "autoprefixer": "^10.3.3",
     "babel-jest": "^29.1.0",
     "eslint": "^8.24.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^27.0.4",
     "identity-obj-proxy": "^3.0.0",
