--- a/package.json
+++ b/package.json
@@ -19,21 +19,17 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/mdx": "^2.1.3",
     "date-fns": "^2.29.3",
     "disqus-react": "^1.1.2",
-    "gray-matter": "^4.0.3",
     "highlight.js": "^11.6.0",
     "next": "^12.3.1",
+    "next-mdx-remote": "^4.1.0",
     "react": "^18.0.9",
     "react-dom": "^18.0.9",
     "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.1",
-    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.0",
-    "remark-mdx": "^2.1.3",
-    "remark-mdx-frontmatter": "^2.0.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
