--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
-    "disqus-react": "^1.1.2",
+    "disqus-react": "^1.1.5",
+    "esbuild": "^0.14.54",
     "highlight.js": "^11.6.0",
+    "mdx-bundler": "^9.0.1",
     "next": "^12.3.1",
-    "next-mdx-remote": "^4.1.0",
-    "react": "^18.0.9",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.1",
