--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "build-static": "next build && next export",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "lint": "next lint",
     "test": "jest",
-    "test-all": "npm lint && npm type-check && npm test",
+    "test-all": "pnpm lint && pnpm type-check && pnpm test",
     "new-post": "./cli/newPost.ts -t"
   },
   "dependencies": {
@@ -29,7 +30,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "rehype-highlight": "^5.0.2",
+    "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.0",
@@ -41,6 +42,7 @@
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/yargs": "^17.0.13",
+    "@babel/core": "7.19.3",
     "autoprefixer": "^10.3.3",
     "babel-jest": "^29.1.0",
     "eslint": "^8.24.0",
